fix icon alignment in firefox

--- a/themes/tria/source/css/style.styl
+++ b/themes/tria/source/css/style.styl
@@ -105,6 +105,7 @@ header
       color shadow
       font-family 'Icons'
       font-size 16px
+      line-height 16px
       transition color 200ms
 
       &:before
